# aws-billing-with-rust

./: Cargo.toml  Makefile
src/: main.rs
